--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "nextjs-web-03",
-  "version": "0.1.0",
   "private": true,
+  "description": " Next.jsで作るウェブサイト",
+  "homepage": "",
+  "author": "YAMA",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +12,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "date-fns": "^2.28.0",
+    "html-react-parser": "^2.0.0",
+    "html-to-text": "^8.2.0",
+    "microcms-js-sdk": "^2.0.0",
+    "next": "12.2.0",
+    "plaiceholder": "^2.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.30.7"
+  },
+  "devDependencies": {
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.2.0"
   }
 }
