--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "date-fns": "^2.28.0",
     "html-react-parser": "^2.0.0",
     "html-to-text": "^8.2.0",
-    "microcms-js-sdk": "^2.0.0",
     "next": "12.2.0",
     "plaiceholder": "^2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-iframe": "^1.8.5",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
